--- a/frontend/public/css/template.css
+++ b/frontend/public/css/template.css
@@ -18,13 +18,13 @@ body {
 }
 
 .content h1 {
-  font-size: 35px;
+  font-size: 48px;
   margin-bottom: 4px;
 }
 
 .content p {
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 20px;
   color: #666;
   margin-bottom: 50px;
 }
@@ -52,7 +52,7 @@ body {
 }
 
 .form-card button {
-  background-color: #d32f2f;
+  background-color: #c30e2f;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -62,7 +62,7 @@ body {
 }
 
 .form-card button:hover {
-  background-color: #b71c1c;
+  background-color: #a1001a;
   color: #ffffff;
 }
 
