--- a/frontend/public/template/template.html
+++ b/frontend/public/template/template.html
@@ -21,7 +21,7 @@
       />
       <div class="menu">
         <a href="/index.html">คำร้องของฉัน</a>
-        <a href="/template/template.html">สร้างคำร้อง</a>
+        <a class="active" href="/template/template.html">สร้างคำร้อง</a>
       </div>
       <a class="logout" onclick="logout()">Log out</a>
     </div>
