--- a/frontend/public/css/form_styles.css
+++ b/frontend/public/css/form_styles.css
@@ -29,7 +29,7 @@ body {
 }
 
 .sidebar h4 {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: bold;
   margin-bottom: 30px;
   padding-left: 2%;
@@ -69,7 +69,7 @@ body {
 
 .topic {
   color: #7c0017;
-  font-size: 48px;
+  font-size: 32px;
   font-weight: bold;
   text-align: left;
   margin-top: 100px;
@@ -113,7 +113,7 @@ body {
 } */
 .form-label {
   color: black;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -124,9 +124,9 @@ body {
 
 .form-input {
   width: 100%;
-  padding: 5px;
-  margin-top:11px;
-  font-size: 22px;
+  padding: 7px 14px;
+  margin-top: 4px;
+  font-size: 16px;
   border: 1px solid #b4b4b4;
   border-radius: 10px;
   box-sizing: border-box;
@@ -151,7 +151,7 @@ body {
   height: 65px;
   background: #c30e2f;
   color: white;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: bold;
   border: none;
   border-radius: 10px;
@@ -167,7 +167,7 @@ body {
   height: 65px;
   background: #e8e8e8;
   color: black;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: bold;
   border: none;
   border-radius: 10px;
@@ -213,6 +213,6 @@ body {
   text-align: left;
   box-sizing: border-box;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: normal; /* ตั้งค่าฟอนต์ในช่องกรอกข้อมูลของตารางเป็น normal */
 }
