--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -109,7 +109,7 @@
   justify-content: space-between; /* Add spacing between text and button */
   margin-bottom: 20px; /* Adjust space below the header */
   margin-top:30px;
-  width: 83%;
+  width: 90%;
 }
 
 .header__container h1 {
@@ -307,7 +307,7 @@
 }
 /* Application Table Container */
 .application-table {
-  width: 85%; /* Adjust width to fit alongside sidebar */
+  width: 90%; /* Adjust width to fit alongside sidebar */
   border-collapse: collapse;
   background-color: #ffffff;
   margin-top: 25px;
@@ -439,7 +439,7 @@
 
 /* Hover effect for View Details button */
 .application-table .view-details-button:hover {
-  background-color: #f2f700; /* Darker blue on hover */
+  background-color: #b39800; /* Darker blue on hover */
 }
 
 /* Add spacing if needed */
